--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 
   <!-- HERO -->
   <section id="home" class="hero">
+    <div class="hero-bg" aria-hidden="true">
+      <video class="hero-video" autoplay muted loop playsinline preload="metadata">
+        <source src="assets/vid/clashvideo.mp4" type="video/mp4" />
+      </video>
+    </div>
     <div class="container hero-inner">
       <div>
-        <span class="badge"><span class="dot"></span> Official Nitrous Outlet Series</span>
+        <span class="badge"><span class="flag-icon" aria-hidden="true">🏁</span> Official Nitrous Outlet Series</span>
         <h1>Clash of the Titans Race Series</h1>
         <p>Showcase classes. Real payouts. Big energy. Bring your best and take home the glory.</p>
         <div class="buttons">
