--- a/classes/rising-titans.html
+++ b/classes/rising-titans.html
@@ -16,7 +16,11 @@
       <a class="logo" href="../index.html#home">
         <img src="../images/logo.png" alt="Clash of the Titans logo" />
       </a>
-      <nav aria-label="Primary">
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="primary-nav">
+        <span class="sr-only">Open menu</span>
+        <span class="nav-toggle-icon" aria-hidden="true"></span>
+      </button>
+      <nav id="primary-nav" class="nav-menu" aria-label="Primary">
         <ul>
           <li><a href="../index.html#classes">Classes</a></li>
           <li><a href="../index.html#registration" class="cta-nav">Register</a></li>
