--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
       <aside class="hero-card">
         <h3>Upcoming Highlight</h3>
-        <p class="lead">Track • City, ST • Month 00–00</p>
+        <p class="lead">Xtreme Raceway • Ferris, TX • March 6th–7th</p>
         <div class="stat-row">
-          <div class="stat"><div class="k">$25k</div><div class="muted">Total Payouts</div></div>
+          <div class="stat"><div class="k">~$57k</div><div class="muted">Total Payouts</div></div>
           <div class="stat"><div class="k">11</div><div class="muted">Race Classes</div></div>
           <div class="stat"><div class="k">3k+</div><div class="muted">Spectators</div></div>
         </div>
@@ -587,7 +587,7 @@
         <div class="schedule-item">
           <div class="meta">
             <div>
-              <div class="b700">Bad Boys Mayhem</div>
+              <div class="b700">Rise of the Titans</div>
               <div class="muted">Xtreme Raceway • Ferris, TX</div>
             </div>
             <span class="pill">Mar 6-7</span>
@@ -604,17 +604,6 @@
             <span class="pill">Apr 17-18</span>
           </div>
           <a class="btn" href="#">Event Page</a>
-        </div>
-
-        <div class="schedule-item">
-          <div class="meta">
-            <div>
-              <div class="b700">Wedding Anniversary</div>
-              <div class="muted">Don't forget this one</div>
-            </div>
-            <span class="pill">May 23</span>
-          </div>
-          <a class="btn" href="#">Reminder</a>
         </div>
 
         <div class="schedule-item">
@@ -646,6 +635,17 @@
               <div class="muted">Texas Motorplex • Ennis, TX</div>
             </div>
             <span class="pill">Sep 17-19</span>
+          </div>
+          <a class="btn" href="#">Event Page</a>
+        </div>
+
+        <div class="schedule-item">
+          <div class="meta">
+            <div>
+              <div class="b700">War of the Titans</div>
+              <div class="muted">Evadale Raceway • Evadale, TX</div>
+            </div>
+            <span class="pill">Nov 13-14</span>
           </div>
           <a class="btn" href="#">Event Page</a>
         </div>
