Previous Year Class Standings Update
Previous year class standings now dynamically loads from a xlsx file.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Lil Titans -->
         <article class="card">
           <div class="row between">
-            <h3>Lil Titans</h3>
+            <h3>Lil' Titans</h3>
             <span class="tag">Jr Dragster</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Lil Titans tabs">
@@ -151,7 +151,7 @@
         <!-- Titans - 4-20ish -->
         <article class="card">
           <div class="row between">
-            <h3>4.20ish</h3>
+            <h3>4.20'ish</h3>
             <span class="tag">Index</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans - 4-20ish tabs">
@@ -184,7 +184,7 @@
         <!-- Titans - 4-50ish -->
         <article class="card">
           <div class="row between">
-            <h3>4.50ish</h3>
+            <h3>4.50'ish</h3>
             <span class="tag">Index</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans - 4-50ish tabs">
@@ -217,7 +217,7 @@
         <!-- Titans 4-90ish -->
         <article class="card">
           <div class="row between">
-            <h3>4.90ish</h3>
+            <h3>4.90'ish</h3>
             <span class="tag">Index</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans 4-90ish tabs">
@@ -250,7 +250,7 @@
         <!-- Titans - 5-30ish -->
         <article class="card">
           <div class="row between">
-            <h3>5.30ish</h3>
+            <h3>5.30'ish</h3>
             <span class="tag">Index</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans - 5-30ish tabs">
@@ -316,7 +316,7 @@
         <!-- Titans - 275 Drag Radial -->
         <article class="card">
           <div class="row between">
-            <h3>275 Drag Radial</h3>
+            <h3>N/T 275 Drag Radial</h3>
             <span class="tag">275 Radial</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans - 275 Drag Radial tabs">
@@ -382,7 +382,7 @@
         <!-- Titans - Outlaw 275 Drag Radial -->
         <article class="card">
           <div class="row between">
-            <h3>Outlaw 275 Drag Radial</h3>
+            <h3>N/T Outlaw 275 Drag Radial</h3>
             <span class="tag danger">Outlaw 275</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans - Outlaw 275 Drag Radial tabs">
@@ -415,7 +415,7 @@
         <!-- Titans Rage - 275 Nitrous Brawl -->
         <article class="card">
           <div class="row between">
-            <h3>Rage - 275 Nitrous Brawl</h3>
+            <h3>Titans Rage - N/T 275 Nitrous Brawl</h3>
             <span class="tag">275 Nitrous</span>
           </div>
           <div class="tabs" role="tablist" aria-label="Titans Rage - 275 Nitrous Brawl tabs">
@@ -456,7 +456,7 @@
 
       <div class="grid cols-3">
         <div class="card">
-          <h3>Lil Titans Entry</h3>
+          <h3>Lil' Titans Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -476,7 +476,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - 4-20ish Entry</h3>
+          <h3>4.20'ish Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -486,7 +486,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - 4-50ish Entry</h3>
+          <h3>4.50'ish Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -496,7 +496,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans 4-90ish Entry</h3>
+          <h3>4.90'ish Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -506,7 +506,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - 5-30ish Entry</h3>
+          <h3>5.30'ish Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -516,7 +516,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - 10-5 Entry</h3>
+          <h3>10.5 Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -526,7 +526,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - 275 Drag Radial Entry</h3>
+          <h3>N/T 275 Drag Radial Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -536,7 +536,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - Outlaw 10-5 Entry</h3>
+          <h3>Outlaw 10.5 Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -546,7 +546,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans - Outlaw 275 Drag Radial Entry</h3>
+          <h3>N/T Outlaw 275 Drag Radial Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -556,7 +556,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans Rage - 275 Nitrous Brawl Entry</h3>
+          <h3>Titans Rage - N/T 275 Nitrous Brawl Entry</h3>
           <p><span class="price">TBD</span> per event</p>
           <div class="row">
             <a class="btn primary" href="#">Add to Cart</a>
@@ -699,13 +699,16 @@
       </div>
 
       <div id="points-archive" class="tabpanel">
-        <div class="card">
-          <h3>2024 Archive</h3>
-          <p>Download full standings by class:</p>
-          <ul>
-            <li><a href="assets/pdf/2024-outlaw-275-standings.pdf">Outlaw 275 (PDF)</a></li>
-            <li><a href="assets/pdf/2024-small-tire-standings.pdf">Small Tire (PDF)</a></li>
-          </ul>
+        <div class="grid cols-2">
+          <div class="card">
+            <h3>2025 Point Series</h3>
+            <p class="muted" id="points-2025-status">Loading 2025 standings…</p>
+            <div id="points-2025-table"></div>
+            <div class="space"></div>
+            <a class="btn" href="standings/2025/2025%20Clash%20Point%20Series%20Standings.xlsx" download>
+              Download 2025 Standings (XLSX)
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -822,6 +825,7 @@
       <p class="copyright">© <span id="year"></span> Clash of the Titans • A Nitrous Outlet Series</p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.20.3/dist/xlsx.full.min.js"></script>
     <script src="script.js"></script>
   </footer>
 </body>
