--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
       <p class="copyright">© <span id="year"></span> Clash of the Titans • A Nitrous Outlet Series</p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.20.3/dist/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="script.js"></script>
   </footer>
 </body>
