--- a/events/round-1.html
+++ b/events/round-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Round 1 • Track Name • City, ST • Clash of the Titans</title>
+  <title>Round 1 • Rise of the Titans • Xtreme Raceway • Ferris, TX • Clash of the Titans</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -31,8 +31,8 @@
 
   <section>
     <div class="container">
-      <h2>Round 1 • Track Name • City, ST</h2>
-      <p class="lead">Mar 14–15 • Presented by Your Sponsor</p>
+      <h2>Round 1 • Rise of the Titans</h2>
+      <p class="lead">Xtreme Raceway • Ferris, TX • Mar 6–7</p>
 
       <div class="grid cols-2">
         <div class="card">
@@ -47,29 +47,22 @@
 
         <div class="card">
           <h3>Results</h3>
-          <table>
-            <thead><tr><th>Class</th><th>Winner</th><th>Runner-up</th></tr></thead>
-            <tbody>
-              <tr><td>Outlaw 275</td><td>Driver A</td><td>Driver B</td></tr>
-              <tr><td>Small Tire</td><td>Driver C</td><td>Driver D</td></tr>
-            </tbody>
-          </table>
-          <div class="space"></div>
-          <a class="btn" href="../assets/pdf/round-1-ladders.pdf">Full Ladder (PDF)</a>
+          <p class="muted">Results and media will be added after the event.</p>
+          <div class="row">
+            <a class="btn" href="../index.html#points">Points Standings</a>
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Xtreme%20Raceway%20Ferris%20TX" target="_blank" rel="noopener">Map</a>
+          </div>
         </div>
       </div>
 
       <div class="card" style="margin-top:16px">
         <h3>Venue Info</h3>
         <ul>
-          <li>Address: 123 Track Rd, City, ST 00000</li>
-          <li>Gates open: 9:00 AM</li>
-          <li>Parking: Follow signs for racer entrance</li>
+          <li>Venue: Xtreme Raceway</li>
+          <li>Location: Ferris, TX</li>
+          <li>Dates: Mar 6–7</li>
         </ul>
-        <div class="row">
-          <a class="btn" href="#">Google Maps</a>
-          <a class="btn" href="#">Track Website</a>
-        </div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Xtreme%20Raceway%20Ferris%20TX" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
