--- a/events/round-4.html
+++ b/events/round-4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Round 2 • Popeyes • Texas Motorplex • Ennis, TX • Clash of the Titans</title>
+  <title>Round 4 • Birth of a Titan • Texas Motorplex • Ennis, TX • Clash of the Titans</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -31,17 +31,18 @@
 
   <section>
     <div class="container">
-      <h2>Round 2 • Popeyes</h2>
-      <p class="lead">Texas Motorplex • Ennis, TX • Apr 17–18</p>
+      <h2>Round 4 • Clash of the Titans: Birth of a Titan</h2>
+      <p class="lead">Texas Motorplex • Ennis, TX • Jul 17–18</p>
 
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
+          <p class="muted">Links will be posted after the event.</p>
           <div class="media-grid">
-            <a class="thumb" href="#">Video</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
+            <a class="thumb" href="#" aria-label="Watch highlight video">Video</a>
+            <a class="thumb" href="#">Photos</a>
+            <a class="thumb" href="#">Photos</a>
+            <a class="thumb" href="#">Photos</a>
           </div>
         </div>
 
@@ -50,6 +51,7 @@
           <p class="muted">Results and media will be added after the event.</p>
           <div class="row">
             <a class="btn" href="../index.html#points">Points Standings</a>
+            <a class="btn" href="../index.html#media">Back to Past Races</a>
             <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Map</a>
           </div>
         </div>
@@ -60,7 +62,7 @@
         <ul>
           <li>Venue: Texas Motorplex</li>
           <li>Location: Ennis, TX</li>
-          <li>Dates: Apr 17–18</li>
+          <li>Dates: Jul 17–18</li>
         </ul>
         <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
