--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
       <div class="grid cols-3">
         <div class="card">
           <h3>Lil' Titans Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$100</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/lil-titans-registration">Buy Entry</a>
             <a class="btn" href="classes/lil-titans.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -467,9 +467,9 @@
 
         <div class="card">
           <h3>Rising Titans Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$100</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/rising-titans-registration">Buy Entry</a>
             <a class="btn" href="classes/rising-titans.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -477,9 +477,9 @@
 
         <div class="card">
           <h3>4.20'ish Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$350</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/4-20ish-class-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-4-20ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -487,9 +487,9 @@
 
         <div class="card">
           <h3>4.50'ish Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$325</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/4-50ish-class-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-4-50ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -497,9 +497,9 @@
 
         <div class="card">
           <h3>4.90'ish Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$325</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/4-90ish-class-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-4-90ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -507,9 +507,9 @@
 
         <div class="card">
           <h3>5.30'ish Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$300</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/5-30ish-class-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-5-30ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -517,9 +517,9 @@
 
         <div class="card">
           <h3>10.5 Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$350</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/10-5-class-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-10-5.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -527,9 +527,9 @@
 
         <div class="card">
           <h3>N/T 275 Drag Radial Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$350</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/275-drag-radial-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-275-drag-radial.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -537,9 +537,9 @@
 
         <div class="card">
           <h3>Outlaw 10.5 Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$400</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-10-5-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-outlaw-10-5.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -547,9 +547,9 @@
 
         <div class="card">
           <h3>N/T Outlaw 275 Drag Radial Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$400</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-n-t-275-drag-radial-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-outlaw-275-drag-radial.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -557,9 +557,9 @@
 
         <div class="card">
           <h3>Titans Rage - N/T 275 Nitrous Brawl Entry</h3>
-          <p><span class="price">TBD</span> per event</p>
+          <p><span class="price">$400</span> per event</p>
           <div class="row">
-            <a class="btn primary" href="#">Add to Cart</a>
+            <a class="btn primary" href="https://nitrousoutlet.com/products/titans-rage-n-t-275-nitrous-brawl-registration">Buy Entry</a>
             <a class="btn" href="classes/titans-rage-275-nitrous-brawl.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
