--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           <p><span class="price">$100</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/rising-titans-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264953484">Buy Points Membership</a>
             <a class="btn" href="classes/rising-titans.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -481,7 +481,7 @@
           <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-20ish-class-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264986252">Buy Points Membership</a>
             <a class="btn" href="classes/titans-4-20ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -492,7 +492,7 @@
           <p><span class="price">$325</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-50ish-class-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265019020">Buy Points Membership</a>
             <a class="btn" href="classes/titans-4-50ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -503,7 +503,7 @@
           <p><span class="price">$325</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-90ish-class-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/5-30ish-or-4-90ish-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265051788">Buy Points Membership</a>
             <a class="btn" href="classes/titans-4-90ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -514,7 +514,7 @@
           <p><span class="price">$300</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/5-30ish-class-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/5-30ish-or-4-90ish-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265084556">Buy Points Membership</a>
             <a class="btn" href="classes/titans-5-30ish.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -525,7 +525,7 @@
           <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/10-5-class-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265117324">Buy Points Membership</a>
             <a class="btn" href="classes/titans-10-5.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -536,7 +536,7 @@
           <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/275-drag-radial-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265150092">Buy Points Membership</a>
             <a class="btn" href="classes/titans-275-drag-radial.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -547,7 +547,7 @@
           <p><span class="price">$400</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-10-5-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265182860">Buy Points Membership</a>
             <a class="btn" href="classes/titans-outlaw-10-5.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -558,7 +558,7 @@
           <p><span class="price">$400</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-n-t-275-drag-radial-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265215628">Buy Points Membership</a>
             <a class="btn" href="classes/titans-outlaw-275-drag-radial.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -569,7 +569,7 @@
           <p><span class="price">$400</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/titans-rage-n-t-275-nitrous-brawl-registration">Buy Entry</a>
-            <a class="btn secondary" href="https://nitrousoutlet.com/products/4-50ish-4-20ish-or-all-heads-up-classes-points-membership">Buy Points Membership</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265248396">Buy Points Membership</a>
             <a class="btn" href="classes/titans-rage-275-nitrous-brawl.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
